@@ -287,12 +287,6 @@ install-headers_$(ARCH)_$(FEATURESET)_$(FLAVOUR): $(STAMPS_DIR)/build_$(ARCH)_$(
 	ln -s /usr/src/$(PACKAGE_NAME) $(PACKAGE_DIR)/lib/modules/$(REAL_VERSION)/build
 	ln -s /usr/src/$(PACKAGE_NAME_COMMON) $(PACKAGE_DIR)/lib/modules/$(REAL_VERSION)/source
 
-	install -d $(PACKAGE_DIR)/DEBIAN
-	sed -e 's/=V/$(REAL_VERSION)/g' \
-	  debian/templates/headers.plain.postinst.in \
-	  > $(PACKAGE_DIR)/DEBIAN/postinst
-	chmod 755 $(PACKAGE_DIR)/DEBIAN/postinst
-
 	+$(MAKE_SELF) install-base
 
 install-libc-dev_$(ARCH): PACKAGE_NAME = linux-libc-dev
@@ -362,9 +356,7 @@ endif
 	rm -f $(PACKAGE_DIR)/lib/modules/$(REAL_VERSION)/source
 	rm $(PACKAGE_DIR)/lib/firmware -rf
 endif
-	+$(MAKE_SELF) \
-	  install-image_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_plain_templates \
-	  PACKAGE_NAME='$(PACKAGE_NAME)' PACKAGE_DIR='$(PACKAGE_DIR)' REAL_VERSION='$(REAL_VERSION)'
+	dh_installdebconf
 	+$(MAKE_SELF) \
 	  install-image_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_plain_bug \
 	  PACKAGE_DIR='$(PACKAGE_DIR)' PACKAGE_NAME='$(PACKAGE_NAME)' REAL_VERSION='$(REAL_VERSION)'
@@ -417,40 +409,6 @@ install-image_s390_$(FEATURESET)_$(FLAVOUR)_plain_image \
 install-image_s390x_$(FEATURESET)_$(FLAVOUR)_plain_image:
 	install -m644 '$(DIR)/arch/s390/boot/image' $(INSTALL_DIR)/vmlinuz-$(REAL_VERSION)
 
-ifneq ($(INITRAMFS),False)
-install-image_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_plain_templates: ARG_INITRD = YES
-endif
-
-ARG_KIMAGE = vmlinuz
-install-image_hppa_$(FEATURESET)_$(FLAVOUR)_plain_templates \
-install-image_mips_$(FEATURESET)_$(FLAVOUR)_plain_templates \
-install-image_mipsel_$(FEATURESET)_$(FLAVOUR)_plain_templates \
-install-image_powerpc_$(FEATURESET)_$(FLAVOUR)_plain_templates \
-install-image_powerpcspe_$(FEATURESET)_$(FLAVOUR)_plain_templates \
-install-image_ppc64_$(FEATURESET)_$(FLAVOUR)_plain_templates: ARG_KIMAGE = vmlinux
-
-install-image_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_plain_templates:
-	for i in $(wildcard debian/templates/image.plain.*.in); do \
-	  target=$$(basename $$i .in); \
-	  target=$${target#image.plain.}; \
-	  sed \
-	    -e 's@=B@$(KERNEL_ARCH)@g' \
-	    -e 's/=I/$(ARG_INITRD)/g' \
-	    -e 's/=K/$(ARG_KIMAGE)/g' \
-	    -e 's/=V/$(REAL_VERSION)/g' \
-	    $$i > debian/$(PACKAGE_NAME).$$target || exit; \
-	done
-	mkdir -p debian/$(PACKAGE_NAME).po
-	for i in $(wildcard debian/templates/po/*.po); do \
-	  sed \
-	    -e 's/=V/$(REAL_VERSION)/g' \
-	    $$i > debian/$(PACKAGE_NAME).po/$$(basename $$i) || exit; \
-	done
-	mkdir -p debian/$(PACKAGE_NAME)/DEBIAN
-	po2debconf --podir debian/$(PACKAGE_NAME).po \
-	  -o debian/$(PACKAGE_NAME)/DEBIAN/templates \
-	  debian/$(PACKAGE_NAME).templates
-
 install-image_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_plain_bug:
 	dh_installdirs usr/share/bug/$(PACKAGE_NAME)
 	dh_install debian/templates/image.plain.bug/* usr/share/bug/$(PACKAGE_NAME)
@@ -468,9 +426,7 @@ install-image-dbg_$(ARCH)_$(FEATURESET)_$(FLAVOUR): $(STAMPS_DIR)/build_$(ARCH)_
 	dh_testroot
 	dh_prep
 	dh_installdirs usr/lib/debug usr/lib/debug/boot usr/share/lintian/overrides/
-	sed -e 's/=V/$(REAL_VERSION)/g' \
-	  debian/templates/image-dbg.lintian-override.in \
-	  > $(PACKAGE_DIR)/usr/share/lintian/overrides/$(PACKAGE_NAME)
+	dh_lintian
 	install -m644 $(DIR)/vmlinux $(DEBUG_DIR)/boot/vmlinux-$(REAL_VERSION)
 ifeq ($(MODULES),True)
 	+$(MAKE_CLEAN) -C $(DIR) modules_install DEPMOD='$(CURDIR)/debian/bin/no-depmod' INSTALL_MOD_PATH='$(CURDIR)'/$(DEBUG_DIR)
