@@ -5,7 +5,7 @@
 #         Debian linux-image postinst script.
 
 $|=1;
-my $version  = "=V";
+my $version  = "@abiname@@localversion@";
 
 if (-d "/etc/kernel/header_postinst.d") {
   print STDERR "Examining /etc/kernel/header_postinst.d.\n";
